--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build-dev": "webpack --mode development",
     "build-prod": "webpack --mode production",
     "gh-deploy": "git push origin :gh-pages && git subtree push --prefix dist origin gh-pages",
-    "gh-deploy-init": "git push origin main && git subtree push --prefix dist origin gh-pages",
+    "gh-deploy-init": "git push origin && git subtree push --prefix dist origin gh-pages",
     "dev": "webpack --mode development && webpack serve --mode development"
   },
   "devDependencies": {
